4.2	deffs in svyglm.svyrep.design (Ben Schneider)

	svynls() allows for prior (eg precision) weights (for Gary Nelson)

	improved names in svyquantile.svyrep.design (Ben Scheider)

	trimWeights() could get into an infinite recursion (Ingmar Sturm)

	data(myco) from Rao, Scott, and Skinner (originally from Clayton & Hills)

	as.svrepdesign now throws an error with post-stratified/raked/calibrated
	designs -- create replicates *first*, then calibrate (for Lauren Kennedy)

	trimWeights now works with replicate-weights designs

	score tests for svyglm (with Keiran Shao)

	svyby(), and thus svyboxplot(), didn't handle the new quantile functions
	correctly when standard error/ci weren't requested (Stephanie Zimmer, Raymond Pan)

	svycontrast() threw an error on the output of svyby() with return.replicates=TRUE
	(Alena Stern)

	Fix regTermTest for svycoxph for the methods lookup changes in R 4.0
	(and consequential change to marginpred)

	We don't provide model.matrix.svycoxph any more;use the inherited
	survival:::model.matrix.coxph

	Recent survival::coxph() switches to robust variances with non-integer weights
	so check for model$naive.var before model$var

	Disable the pass-through from predict.svycoxph to predict.coxph for type="expected"

4.1-1	CRAN

4.1	svyquantile() has been COMPLETELY REWRITTEN. The old version is available
	as oldsvyquantile() (for David Eduardo Jorquera Petersen)

	svycontrast()'s improvements for statistics with replicates are now also there with
	svyby(), for domain comparisons (Robert Baskin)

	svyttest() now gives an error message if the binary group variable isn't binary
	(for StackOverflow 60930323)

	confint.svyglm Wald-type intervals now correctly label the columns (eg 2.5%, 97.5%)
	(for Molly Petersen)

	svyolr() using linearisation had the wrong standard errors for intercepts
	other than the first, if extracted using vcov (it was correct in summary() output)
