@@ -83,6 +83,7 @@ requests from users, including:
   Ángel Rodríguez Laso
   Mark Rosenstein
   Benjamin Schneider
+  Dirk Schumacher
   Dan Simpson
   Pam Shaw
   Keiran Shao
